[tool.poetry]
name = "github-actions-test"
version = "0.1.0"
description = ""
authors = ["SShowbiz <hwkim408@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.61.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
